--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,14 @@ npm-debug.log
 yarn-debug.log
 yarn-error.log
 
+# Python virtual environment
+venv/
+env/
+ENV/
+
+# Configuration files
+config/
+
 # Environment variables
 .env
 .env.local
