--- a/data/requirements.txt
+++ b/data/requirements.txt
@@ -8,4 +8,9 @@ python-dotenv==1.0.0
 # Frontend dependencies
 flask==2.3.3
 requests==2.31.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+
+#Bot dependencies
+discord.py==2.3.2
+python-dotenv==1.0.0
+requests==2.31.0
