--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: "frontend"
+    environment:
+      DOCKERCONTAINERMANAGER_DEBUG: True
     ports:
       - "5000:5001"
 
@@ -12,6 +14,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: "backend"
+    environment:
+      DOCKERCONTAINERMANAGER_DEBUG: True
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
@@ -19,4 +23,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      DOCKERCONTAINERMANAGER_DISCORD_TOKEN: ${DISCORD_TOKEN}
     command: "bot"
