--- a/docs/docker-compose_example/compose.yaml
+++ b/docs/docker-compose_example/compose.yaml
@@ -16,7 +16,7 @@ services:
       DOCKERCONTAINERMANAGER_SERVICE_TYPE: backend
     volumes:
       - ./data/backend:/app/backend
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/run/docker.sock:/var/run/docker.sock:ro
 
   bot:
     image: gamecontainermanager:latest
