--- a/docs/docker-compose_example/compose.yaml
+++ b/docs/docker-compose_example/compose.yaml
@@ -2,7 +2,7 @@ services:
   frontend:
     image: gamecontainermanager:latest
     environment:
-      DOCKERCONTAINERMANAGER_DEBUG: False
+      DOCKERCONTAINERMANAGER_DEBUG: "False"
       DOCKERCONTAINERMANAGER_SERVICE_TYPE: frontend
     volumes:
       - ./data/frontend:/app/frontend
@@ -12,7 +12,7 @@ services:
   backend:
     image: gamecontainermanager:latest
     environment:
-      DOCKERCONTAINERMANAGER_DEBUG: False
+      DOCKERCONTAINERMANAGER_DEBUG: "False"
       DOCKERCONTAINERMANAGER_SERVICE_TYPE: backend
     volumes:
       - ./data/backend:/app/backend
