--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -9,6 +9,12 @@ on:
       - '.**'
       - '.*/**' 
       - 'README.md'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Version number to tag (git and docker image)'
+        required: false
+        type: string
 
 jobs:
   build:
@@ -26,6 +32,22 @@ jobs:
         run: |
           echo "IMAGE_LOWER=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
           echo "BRANCH_NAME=$(echo '${{ github.ref }}' | sed 's|refs/[^/]*/||g' | tr '/' '-')" >> $GITHUB_ENV
+
+      - name: Check if tag exists on remote
+        if: github.event.inputs.version != ''
+        run: |
+          if git ls-remote --tags origin "${{ github.event.inputs.version }}" | grep -q "${{ github.event.inputs.version }}"; then
+            echo "Tag ${{ github.event.inputs.version }} already exists on the remote."
+            exit 0
+          fi
+      
+      - name: Create and push Git tag
+        if: github.event.inputs.version != ''
+        run: |
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'github-actions@github.com'
+          git tag -a "${{ github.event.inputs.version }}" -m "Release ${{ github.event.inputs.version }}"
+          git push origin "${{ github.event.inputs.version }}"
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -47,3 +69,4 @@ jobs:
             ghcr.io/${{ env.IMAGE_LOWER }}:latest
             ghcr.io/${{ env.IMAGE_LOWER }}:${{ env.BRANCH_NAME }}
             ghcr.io/${{ env.IMAGE_LOWER }}:${{ github.sha }}
+            ${{ github.event.inputs.version && format('ghcr.io/{0}:{1}', env.IMAGE_LOWER, github.event.inputs.version) || '' }}
